syntax = "proto3";

package bancada;

service TaskService {
  rpc ObterLeitura (Empty) returns (Leitura);
  rpc CalcularEstatisticas (LeiturasRequest) returns (EstatisticasResponse);
}

message Empty {}

message Leitura {
  float temperatura = 1;
  float umidade = 2;
  float condutividade = 3;
}

message LeiturasRequest {
  repeated Leitura leituras = 1;
}

message EstatisticasResponse {
  Leitura media = 1;
  Leitura mediana = 2;
}
